2002-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test:
	* tests/encoding.test: updated to reflect iso2022 escape change
	* library/encoding/iso2022-jp.enc: 
	* library/encoding/iso2022.enc: 
	* tools/encoding/iso2022-jp.esc:
	* tools/encoding/iso2022.esc: gave <ESC>$B precedence over <ESC>$@,
	based on comments (point 1) in [Bug #219283] (rfc 1468)

	* tests/encoding.test: added encoding-23.* tests
	* generic/tclIO.c (FilterInputBytes): reset the TCL_ENCODING_START
	flags in the ChannelState when using 'gets'. [Bug #523988]
	Also reduced the value of ENCODING_LINESIZE from 30 to 20 as this
	seems to improve the performance of 'gets' according to tclbench.

2002-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* unix/tclUnixChan.c (TclpOpenFileChannel): Added code to regonize
	  "/dev/tty" (by name) and to not handle it as tty / serial
	  line. This is the controlling terminal and is special. Setting
	  it into raw mode as is done for other tty's is a bad idea. This
	  is a hackish fix for expect SGF Bug #520624.

2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mac/tclMacSock.c (TcpGetOptionProc): Changed to recognize the
	  option "-error". Essentially ignores the option, always
	  returning an empty string.

2002-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinNotify.c (Tcl_FinalizeNotifier): backported fix for
	  [Bug #217982] which also affected Tkinter [Python Bug #216289]

2002-02-25  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclLoadDyld.c: updated to use Mac OS X 10.1 dyld APIs that     
	  have more libdl-like semantics. (bug #514392)

2002-02-19  Don Porter	<dgp@users.sourceforge.net>

	* changes: reversed the order of 8.3.3 changes.

2002-02-15  Don Porter	<dgp@users.sourceforge.net>

	* changes: First draft of Tcl changes for 8.3.5 release.

2002-02-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/scan.test:
	* generic/tclScan.c (Tcl_ScanObjCmd): corrected scan 0x... %x